# tuna-installer-kde

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  fisherman-recipe.schema.json
.github/workflows/: publish-flatpak.yml
flatpak/: org.tunaos.InstallerKde.json
src/: main.cpp  offline.cpp  offline.h  recipe.cpp  recipe.h  wizard.cpp  wizard.h
src/pages/: confirm.cpp  confirm.h  diskselection.cpp  diskselection.h  done.cpp  done.h  encryption.cpp  encryption.h  progress.cpp  progress.h  welcome.cpp  welcome.h
